duicontrolpanel (0.8.15~unreleased) unstable; urgency=low

  * new version
  * disables Most Used Category at compile time by default (DUI-3920)
  * Fixes: NB#194199 -  modification of libmeegocontrolpanel-doc
    installation method
  * Fixes: NB#193715 -  duicontrolpanel-soundsettingsapplet has no aegis
    manifest

 -- Robert Manner <robert.manner@blumsoft.eu>  Mon, 27 Sep 2010 10:46:49 +0200

duicontrolpanel (0.8.14) unstable; urgency=low

  * Fixes: NB#192485 - Settings app view switches back from applet view
    to main view when we try to open the settings app once again
  * Fixes: NB#192478 - Activate Offline mode button is shown in all views of
    control panel applets in a given scenario

 -- Robert Manner <robert.manner@blumsoft.eu>  Tue, 21 Sep 2010 10:24:07 +0200

duicontrolpanel (0.8.13) unstable; urgency=low

  * Changes: delayed widget creation at applet list makes it possible to create long
    applet lists
  * Fixes: DcpContentItem could not be clicked until the applet got loaded
  * Fixes: NB#189265 - Tapping Settings button in status menu does not
    open settings view
  * Changes: Adds tracker::TrackerReadAccess credential
  * Fixes: NB#191373 -  Source package 'duicontrolpanel' interfaces not
    frozen in 0.2010.36-5
  * Workarounds: 188565 -  Offline mode button is left aligned...
  * Fixes: NB#192086 - Glitch in applet name when returning from an
    applet

 -- Robert Manner <robert.manner@blumsoft.eu>  Wed, 15 Sep 2010 13:16:27 +0200

duicontrolpanel (0.8.12.1) unstable; urgency=low

  * Fixes: NB#184916 - Back button closes the controlpanel in this
    scenario
  * Fixes: NB#188215 -  Look and feel settings uses wrong object names
  * Fixes: NB#188203 -  System Settings main view uses wrong object
    names
  * Adds icons to category menus (updated ui to spec 1.5)

 -- Robert Manner <robert.manner@blumsoft.eu>  Mon, 06 Sep 2010 16:51:14 +0200

duicontrolpanel (0.8.11) unstable; urgency=low
