@@ -3,9 +3,13 @@
     <credential name="Cellular" />
     <credential name="timed::TimeControl" />
     <credential name="TrackerReadAccess" />
-    <for path="/usr/bin/duicontrolpanel.launch" />
     <for path="/usr/bin/duicontrolpanel" />
-    <for path="applauncherd-launcher::/usr/bin/applauncherd.bin" />
+  </request>
+  <request>
+    <credential name="Cellular" />
+    <credential name="timed::TimeControl" />
+    <credential name="TrackerReadAccess" />
+    <for path="/usr/bin/duicontrolpanel.launch" />
   </request>
 </aegis>
 
